# ncnn

./: .gitignore  CMakeLists.txt  build.py  compile_commands.json  config_debug.py  config_release.py  gen_lsp.py
.agents/skills/: project_structure.skill
.agents/skills/cpp-style/: SKILL.md
.agents/skills/project_structure/: SKILL.md
.agents/skills/project_structure/references/: output-template.md
.agents/skills/project_structure/scripts/: analyze_project.py
maxwell_example/: CMakeLists.txt  maxwell_example.cpp  maxwell_model_ncnn.py  maxwell_model_pnnx.py  maxwell_net.py
